2016-10-15 rryqszq4 <ngxphp@gmail.com>
	* add php api "ngx_log::error"

	* fixd support dns resolver

2016-09-16 rryqszq4 <ngxphp@gmail.com>
	* dev code "ngx_http_php_stream.h", "ngx_http_php_stream.c"
	
	* fixd php api "ngx_socket_tcp", "::connect, ::send, ::receive, ::close" support rediscovery

	* add nginx directive "content_thread_by_php", "content_thread_by_php_file"

	* fixd "ngx_socket_tcp::send" send pack error

	* fixd server active push to client about "ngx_socket_tcp::receive"

	* bumped version to 0.0.5

2016-05-30 rryqszq4 <ngxphp@gmail.com>
	* change nginx directive "php_init_code"=>"init_by_php", "php_init_file"=>"init_by_php_file", "php_rewrite_handler"=>"rewrite_by_php_file", "php_rewrite_handler_code"=>"rewrite_by_php", "php_access_handler"=>"access_by_php_file", "php_access_handler_code"=>"access_by_php", "php_content_handler"=>"content_by_php_file", "php_content_handler_code"=>"content_by_php","php_set_code"=>"set_by_php", "php_set_run_code"=>"set_run_by_php", "php_set_file"=>"set_by_php_file", "php_set_run_file"=>"set_run_by_php_file"

	* add nginx directive "content_async_by_php"

	* add php api "ngx_location::capture_async", "ngx_location::capture_multi_async"

	* add php api "ngx_location::capture", "ngx_location::capture_multi"

	* add php api "ngx_socket_tcp", "::connect, ::send, ::receive, ::close"

	* merge docker file

	* bumped version to 0.0.4

2016-05-22 rryqszq4 <ngxphp@gmail.com>
	* append ngx_devel_kit-0.2.19 module

	* append $_SERVER['SCRIPT_NAME']

	* add nginx directive "php_set_code", "php_set_run_code", "php_set_file", "php_set_run_file"

	* support and test framework yaf and yii-1

	* bumped version to 0.0.3
	
2016-05-8 rryqszq4 <ngxphp@gmail.com>
	* complie php5.3~5.6 nginx1.4~1.9
	
	* fixed: error call headers_sent()
	
	* support php session
	
	* fixed: support php://input
	
	* append $_SERVER['QUERY_STRING'], $_SERVER['CONTENT_TYPE'], $_SERVER['CONTENT_LENGTH'],$_SERVER['DOCUMENT_ROOT']
	